# reconfactory-digital-twin

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_powershell.ps1  run_ubuntu.sh
analytics/: __init__.py  metrics.py  reports.py
app/: __init__.py  main.py
config/: factory.yaml  fault_rules.yaml  machines.yaml  products.yaml  routing_weights.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DEMO_SCENARIOS.md  GAZEBO_FALLBACK.md  OPC_UA.md  PREDICTIVE_MAINTENANCE.md  ROS2_INTEGRATION.md  VISION_SYSTEM.md  api.md  architecture.md  database_schema.md  fault_model.md
frontend/: app.js  index.html  styles.css
industrial/: __init__.py  opcua_server.py
integrations/: __init__.py  detector.py
maintenance/: __init__.py  health.py
reconfactory/: __init__.py  config.py  faults.py  logger.py  models.py  reconfiguration.py  scheduler.py  state_machine.py  stations.py  supervisor.py  tracker.py
ros2_ws/src/reconfactory_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/reconfactory_ros/config/: bridge.yaml
ros2_ws/src/reconfactory_ros/launch/: reconfactory_bridge.launch.py
ros2_ws/src/reconfactory_ros/reconfactory_ros/: __init__.py  fault_detector_node.py  http_client.py  logger_node.py  station_controller_node.py  supervisor_node.py
scripts/: check_integrations.py  export_report.py  generate_products.py  generate_sensor_data.py  run_experiment.py  run_factory.py  run_gazebo.sh  run_gazebo_sync.sh  run_ros_bridge.sh
tests/: test_analytics.py  test_data_logger.py  test_gazebo_sync.py  (+9 more)
(+9 files in other folders)
