<?xml version="1.0"?>
<package format="3">
  <name>reconfactory_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge nodes for the ReConFactory Digital Twin.</description>
  <maintainer email="maintainer@example.com">ReConFactory Maintainer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
